fix dashboard layout shift

--- a/app/(private)/(dashboard)/layout.module.css
+++ b/app/(private)/(dashboard)/layout.module.css
@@ -1,5 +1,6 @@
 .header {
-  height: 100%;
+  display: flex;
+  align-items: center;
   padding-left: var(--mantine-spacing-md);
   padding-right: var(--mantine-spacing-md);
 }
